--- a/AGDPMS/wwwroot/index.html
+++ b/AGDPMS/wwwroot/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AGDPMS</title>
     <base href="/" />
-    <link rel="stylesheet" href="_content/AGDPMS.Shared/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="_content/AGDPMS.Shared/app.css" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="AGDPMS.styles.css" />
-    <link rel="icon" href="data:,">
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="AGDPMS.styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
+    <div id="app">
+        <div class="loading">
+            <div class="spinner"></div>
+            <p>Loading AGDPMS...</p>
+        </div>
+    </div>
 
-    <div class="status-bar-safe-area"></div>
-
-    <div id="app">Loading...</div>
-
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
-
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
+    <script src="_framework/blazor.webview.js"></script>
 </body>
 
 </html>
