--- a/AGDPMS/wwwroot/index.html
+++ b/AGDPMS/wwwroot/index.html
@@ -24,7 +24,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webview.js"></script>
+    <script src="_framework/blazor.webview.js" autostart="false"></script>
 </body>
 
 </html>
