--- a/AGDPMS/wwwroot/index.html
+++ b/AGDPMS/wwwroot/index.html
@@ -24,7 +24,7 @@
     <div id="app">Loading...</div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
-    
+    <script src="_content/AGDPMS.Shared/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
