NotificationHub and Uncomplete printQR function

--- a/AGDPMS/wwwroot/index.html
+++ b/AGDPMS/wwwroot/index.html
@@ -25,6 +25,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/AGDPMS.Shared/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="~/js/print.js"></script>
 </body>
 
 </html>
